Fixed login menu overflow issue with navigation

--- a/dev/styles/partials/components/_home.scss
+++ b/dev/styles/partials/components/_home.scss
@@ -2,6 +2,8 @@
     background: $mainPeach;
     color: white;
     width: 100%;
-    height: 100vh;
-    @include flex(column, center, center)
+    display: block;
+    text-align: center;
+    overflow: hidden;
+    padding: 70px; //70px is height of navigation bar
 }
